set02/problem04_compile_errors.txt
Compilation started at 2/28/2024, 10:37:10 PM
c:\Users\umesh\c-activity-sets\set02\problem04.c: In function 'input_array_size':
c:\Users\umesh\c-activity-sets\set02\problem04.c:19:1: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
 printf("enter the number\n");
 ^~~~~~
c:\Users\umesh\c-activity-sets\set02\problem04.c:19:1: warning: incompatible implicit declaration of built-in function 'printf'
c:\Users\umesh\c-activity-sets\set02\problem04.c:19:1: note: include '<stdio.h>' or provide a declaration of 'printf'
c:\Users\umesh\c-activity-sets\set02\problem04.c:20:1: warning: implicit declaration of function 'scanf' [-Wimplicit-function-declaration]
 scanf("%d",&n);
 ^~~~~
c:\Users\umesh\c-activity-sets\set02\problem04.c:20:1: warning: incompatible implicit declaration of built-in function 'scanf'
c:\Users\umesh\c-activity-sets\set02\problem04.c:20:1: note: include '<stdio.h>' or provide a declaration of 'scanf'
c:\Users\umesh\c-activity-sets\set02\problem04.c: In function 'input_array':
c:\Users\umesh\c-activity-sets\set02\problem04.c:25:5: warning: incompatible implicit declaration of built-in function 'printf'
     printf("Enter %d numbers for the array:\n",n);
     ^~~~~~
c:\Users\umesh\c-activity-sets\set02\problem04.c:25:5: note: include '<stdio.h>' or provide a declaration of 'printf'
c:\Users\umesh\c-activity-sets\set02\problem04.c:28:9: warning: incompatible implicit declaration of built-in function 'scanf'
         scanf("%d", &a[i]);
         ^~~~~
c:\Users\umesh\c-activity-sets\set02\problem04.c:28:9: note: include '<stdio.h>' or provide a declaration of 'scanf'
c:\Users\umesh\c-activity-sets\set02\problem04.c: In function 'sum_composite_numbers':
c:\Users\umesh\c-activity-sets\set02\problem04.c:44:18: error: expected expression before '=' token
             sum+ = a[i];
                  ^
c:\Users\umesh\c-activity-sets\set02\problem04.c: In function 'output':
c:\Users\umesh\c-activity-sets\set02\problem04.c:50:5: warning: incompatible implicit declaration of built-in function 'printf'
     printf("Sum of composite numbers in the array: %d\n", sum);
     ^~~~~~
c:\Users\umesh\c-activity-sets\set02\problem04.c:50:5: note: include '<stdio.h>' or provide a declaration of 'printf'
Compilation finished at 2/28/2024, 10:37:10 PM
Compilation started at 2/28/2024, 10:37:54 PM
c:\Users\umesh\c-activity-sets\set02\problem04.c: In function 'sum_composite_numbers':
c:\Users\umesh\c-activity-sets\set02\problem04.c:44:18: error: expected expression before '=' token
             sum+ = a[i];
                  ^
Compilation finished at 2/28/2024, 10:37:55 PM
Compilation started at 2/28/2024, 10:38:27 PM
Compilation finished at 2/28/2024, 10:38:28 PM
Compilation started at 2/28/2024, 10:43:34 PM
Compilation finished at 2/28/2024, 10:43:35 PM
